--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,17 @@ services:
     environment:
       POSTGRES_PASSWORD: mysecretpassword
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
+
   shortlink:
     build: .
     ports:
       - '8080:8080'
     environment:
       DATABASE_URL: postgres://postgres:mysecretpassword@postgres:5432/postgres?sslmode=disable
+      REDIS_ADDR: redis:6379
+      ROOT_URL: http://localhost:8080
       LISTEN_ADDR: ':8080'
